폴더 구조 정리 및 css 정리

--- a/login.html
+++ b/login.html
@@ -4,28 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LoginPage</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./styles/login.css" />
 </head>
 <body>
-  <button class="left-nav">
-
-  </button>
   <div class="login-element">
     <div class="login-title">
-      <p>Hello!</p>
-      <p>We are IREA GOLF</p>
+      <p>IREA GOLF ACADEMY</p>
     </div>
     <div class="login-window">
       <h1>LOG IN</h1>
       <div class="login-input">
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-        <button>Log In</button>
+        <button type="button" onclick="location.href='home.html'">Log In</button>
+        <!-- 우선 이동만 되게 만들었어요 -->
       </div>
     </div>
   </div>
-  <button class="right-nav">
-
-  </button>
 </body>
 </html>
