page 일단 파일 만들기

--- a/home.html
+++ b/home.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HomePage</title>
+  <link rel="stylesheet" href="./styles/home.css" />
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <button>Log out</button>
+      <button>프로 관리</button>
+    </nav>
+  </header>
+  <section>
+    <div>
+      <p>IREA</p>
+      <p>GOLF ACADEMY</p>
+      <hr>
+      <span>Adjustment System</span>
+    </div>
+    <nav>
+      <button>라커 관리</button>
+      <button>회원 신청</button>
+      <button>회원 열람</button>
+    </nav>
+  </section>
+  <section>
+    <p>데이터</p>
+  </section>
 </body>
 </html>
