--- a/lockerPage.html
+++ b/lockerPage.html
@@ -19,9 +19,15 @@
         <span>빈 라커</span>
       </div>
     </div>
-    <div id="box-wrapper">
-      <script src="./js/locker.js"></script>
+    <div id="box-wrapper"></div>
+    <script src="./js/locker.js"></script>
+  </section>
+  <section id="modalWrap">
+    <div id="modalBody">
+      <span id="closeBtn">&times;</span> <!--X 버튼-->
+      <P>Locker 내용</P>
     </div>
+    <script src="./js/lockerPopup.js"></script>
   </section>
 </body>
 </html>
