--- a/home.html
+++ b/home.html
@@ -13,20 +13,20 @@
       <button>프로 관리</button>
     </nav>
   </header>
-  <section>
-    <div>
+  <section class="main-container">
+    <div class="title-container">
       <p>IREA</p>
       <p>GOLF ACADEMY</p>
       <hr>
       <span>Adjustment System</span>
     </div>
-    <nav>
-      <button>라커 관리</button>
-      <button>회원 신청</button>
-      <button>회원 열람</button>
+    <nav class="button-container">
+      <button onclick="location.href='lockerPage.html'">라커 관리</button>
+      <button onclick="location.href='signin.html'">회원 신청</button>
+      <button onclick="location.href='memberPage.html'">회원 열람</button>
     </nav>
   </section>
-  <section>
+  <section class="data-container">
     <p>데이터</p>
   </section>
 </body>
