--- a/signin.html
+++ b/signin.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./styles/signin.css" />
 </head>
 <body>
+  <header>
+    <h3>IREA GOLF ACADEMY</h3>
+  </header>
   <div class="signin-element">
     <h1>회원신청</h1>
     <form class="signin-form">
@@ -100,6 +103,7 @@
         </div>
       </div>
       <div class="class-info">
+        <!-- 수업 정보 받는 부분 -->
         <h2>수업정보</h2>
         <hr>
         <div class="registration-date">
@@ -178,8 +182,8 @@
           <label class="label-small">가격</label>
           <input type="text" id="price" name="price" placeholder="30만원" readonly>
         </div>
-        
       </div>
+      <button type="submit">제출</button>
     </form>
   </div>
 </body>
