locker id 부여 코드 수정

--- a/lockerPage.html
+++ b/lockerPage.html
@@ -20,9 +20,11 @@
       </div>
     </div>
     <div id="box-wrapper"></div>
+    <!-- Locker btn 생성 js에서 -->
     <script src="./js/locker.js"></script>
   </section>
   <section id="modalWrap">
+    <!-- Locker 선택시 뜨는 창. js에서 생성 -->
     <div id="modalBody">
       <span id="closeBtn">&times;</span> <!--X 버튼-->
       <P>Locker 내용</P>
