만료일 계산 파일 정리

--- a/signin.html
+++ b/signin.html
@@ -123,33 +123,8 @@
           <label class="label-small" for="expiry_date">만료일</label>
           <input type="date" id="expiry_date" name="expiry_date" readonly>  
         </div>
-        
-
-        <!--만료일 자바스크립트로 일단 자동 계산-->
-        <script>
-          const startDateInput = document.getElementById('start_date'); 
-          const monthsInput = document.getElementById('months');
-          const expiryDateInput = document.getElementById('expiry_date');
-
-          function calExpiryDate() {
-            const startDateValue = startDateInput.value;
-            const monthsValue = parseInt(monthsInput.value, 10);
-
-            if (startDateValue && monthsValue > 0) {
-              const startDate = new Date(startDateValue);
-              startDate.setMonth(startDate.getMonth() + monthsValue);
-
-              const year = startDate.getFullYear();
-              const month = String(startDate.getMonth() + 1).padStart(2, '0') //월 0부터 시작해서 +1
-              const day = String(startDate.getDate()).padStart(2, '0');
-
-              expiryDateInput.value = `${year}-${month}-${day}`;
-            }
-          }
-
-          startDateInput.addEventListener('input', calExpiryDate);
-          monthsInput.addEventListener('input', calExpiryDate);
-        </script>
+        <!-- 만료일 계산 js -->
+        <script src="./js/expiryDate.js"></script>
 
         <div class="lesson-input">
           <div>
