--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       <p>IREA</p>
       <p>GOLF ACADEMY</p>
       <hr>
-      <span>Adjustment System</span>
+      <span class="subtitle-right">Adjustment System</span>
     </div>
     <nav class="button-container">
       <button onclick="location.href='lockerPage.html'">라커 관리</button>
