--- a/signin.html
+++ b/signin.html
@@ -138,7 +138,10 @@
           <input type="text" id="price" name="price" placeholder="30만원" readonly>
         </div>
       </div>
-      <button type="submit">제출</button>
+      <div class="submit-btn-container">
+        <button class="submit-btn" type="submit">등록</button>
+      </div>
+      
     </form>
   </div>
 </body>
