라커 배치 수정

--- a/lockerPage.html
+++ b/lockerPage.html
@@ -10,12 +10,12 @@
   <header><p>IREA GOLF ACADEMY</p></header>
   <hr>
   <section>
-    <div>
-      <span>라커 | 78/110</span>
-      <div>
-        <div></div>
+    <div class="locker-info-container">
+      <span>라커<div></div>78/110</span>
+      <div class="locker-info-colorbox">
+        <div style="background-color: #ffffff80;"></div>
         <span>등록된 라커</span>
-        <div></div>
+        <div style="background-color: #ffffff18;"></div>
         <span>빈 라커</span>
       </div>
     </div>
@@ -73,7 +73,6 @@
           <label class="label-small">가격</label>
           <input type="text" id="price" name="price" placeholder="30만원" readonly>
         </div>
-      </div>
       <button type="submit">제출</button>
       </form>
     </div>
