--- a/memberPage.html
+++ b/memberPage.html
@@ -10,7 +10,7 @@
   <header><p>IREA GOLF ACADEMY</p></header>
   <section>
     <h3>회원정보</h3>
-    <div>
+    <div class="search-container">
       <!-- 회원 검색 부분-->
       <form>
         <input id="name" name="name"/>
@@ -39,20 +39,45 @@
       </form>
     </div>
     <article>
-      <div>
-        <span>이름</span>
-        <span>성별</span>
-        <span>생년월일</span>
-        <span>연락처</span>
-        <span>등록일자</span>
-        <span>등록기간</span>
-        <span>만료일자</span>
-        <span>프로정보</span>
-        <span>가격</span>
+      <div class="styled-table">
+        <div class="table-title">
+          <div class="small">이름</div>
+          <div class="small">성별</div>
+          <div class="medium">생년월일</div>
+          <div class="big">전화번호</div>
+          <div class="big">등록일자</div>
+          <div class="medium">등록기간</div>
+          <div class="big">만료일자</div>
+          <div class="medium">프로정보</div>
+          <div class="small">가격</div>
+          <div class="small"></div>
+        </div>
+        <!-- 회원 결과 출력 -->
+        <div class="table-contents">
+          <div class="small">이지원</div>
+          <div class="small">남자</div>
+          <div class="medium">040128</div>
+          <div class="big">01072394628</div>
+          <div class="big">2024.09.03</div>
+          <div class="medium">3개월</div>
+          <div class="big">2027.12.03</div>
+          <div class="medium">최유찬</div>
+          <div class="small">30만원</div>
+          <div class="small"><button class="action-btn">수정</button></div>
+        </div>
+        <div class="table-contents">
+          <div class="small">이지원</div>
+          <div class="small">남자</div>
+          <div class="medium">040128</div>
+          <div class="big">01072394628</div>
+          <div class="big">2024.09.03</div>
+          <div class="medium">3개월</div>
+          <div class="big">2027.12.03</div>
+          <div class="medium">최유찬</div>
+          <div class="small">30만원</div>
+          <div class="small"><button class="action-btn">수정</button></div>
+        </div>
       </div>
-      <script>
-        
-      </script>
     </article>
   </section>
 </body>
