홈 버튼 연결

--- a/homePage.html
+++ b/homePage.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <button>Log out</button>
-      <button>프로 관리</button>
+      <button onclick="location.href='managerPage.html'">프로 관리</button>
     </nav>
   </header>
   <section class="main-container">
@@ -22,7 +22,7 @@
     </div>
     <nav class="button-container">
       <button onclick="location.href='lockerPage.html'">라커 관리</button>
-      <button onclick="location.href='signin.html'">회원 신청</button>
+      <button onclick="location.href='signinPage.html'">회원 신청</button>
       <button onclick="location.href='memberPage.html'">회원 열람</button>
     </nav>
   </section>
