feat: 뒤로가기 추가

--- a/homePage.html
+++ b/homePage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <button>Log out</button>
+      <button onclick="location.href='loginPage.html'">Log out</button>
       <button onclick="location.href='managerPage.html'">프로 관리</button>
     </nav>
   </header>
