--- a/lockerPage.html
+++ b/lockerPage.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="./styles/locker.css" />
 </head>
 <body>
-  <header><p>IREA GOLF ACADEMY</p></header>
+  <header>
+    <p>IREA GOLF ACADEMY</p>
+    <div><button onclick="history.back()">뒤로가기</button></div>
+  </header>
   <hr>
   <section>
     <div class="locker-info-container">
