--- a/loginPage.html
+++ b/loginPage.html
@@ -16,7 +16,7 @@
       <div class="login-input">
         <input type="text" placeholder="Username">
         <input type="password" placeholder="Password">
-        <button type="button" onclick="location.href='home.html'">Log In</button>
+        <button type="button" onclick="location.href='homePage.html'">Log In</button>
         <!-- 우선 이동만 되게 만들었어요 -->
       </div>
     </div>
