--- a/memberPage.html
+++ b/memberPage.html
@@ -7,7 +7,10 @@
   <link rel="stylesheet" href="./styles/member.css" />
 </head>
 <body>
-  <header><p>IREA GOLF ACADEMY</p></header>
+  <header>
+    <p>IREA GOLF ACADEMY</p>
+    <div><button onclick="history.back()">뒤로가기</button></div>
+  </header>
   <section>
     <h3>회원정보</h3>
     <div class="search-container">
