feat:회원 페이지 css수정

--- a/memberPage.html
+++ b/memberPage.html
@@ -16,8 +16,10 @@
     <div class="search-container">
       <!-- 회원 검색 부분-->
       <form>
-        <input id="name" name="name"/>
-        <button>검색</button>
+        <div>
+          <input id="name" name="name" placeholder="이름 검색"/>
+          <button>검색</button>
+        </div>
         <div>
           <select id="gender" name="gender">
             <option disabled hidden selected>성별</option>
