--- a/lockerPage.html
+++ b/lockerPage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <p>IREA GOLF ACADEMY</p>
-    <div><button onclick="history.back()">뒤로가기</button></div>
+    <div><button onclick="location.href='homePage.html'">뒤로가기</button></div>
   </header>
   <hr>
   <section>
