--- a/signinPage.html
+++ b/signinPage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h3>IREA GOLF ACADEMY</h3>
-    <div><button onclick="history.back()">뒤로가기</button></div>
+    <div><button onclick="location.href='homePage.html'">뒤로가기</button></div>
   </header>
   <div class="signin-element">
     <h1>회원신청</h1>
