feat, css: 버튼 아이콘 제안

--- a/lockerPage.html
+++ b/lockerPage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <p>IREA GOLF ACADEMY</p>
-    <div><button onclick="location.href='homePage.html'">뒤로가기</button></div>
+    <div><button onclick="location.href='homePage.html'"><img src="./styles/icons/icons8-home-24.svg" /></button></div>
   </header>
   <hr>
   <section>
