--- a/managerPage.html
+++ b/managerPage.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <p>IREA GOLF ACADEMY</p>
-    <div><button onclick="location.href='homePage.html'">뒤로가기</button></div>
+    <div><button onclick="location.href='homePage.html'">홈으로</button></div>
   </header>
   <section>
     <h3>직원관리</h3>
